Updating to 5e70c1fb5f8df62c4516ecfe5e02371d7c247adb.

--- a/ruby_plan.html
+++ b/ruby_plan.html
@@ -43,7 +43,7 @@
 
 <li>introduce to irb</li>
 
-<li>+, -, <em>, /, % (inc dividing integers), expressions, numbers evaluate to themselves</em></li>
+<li><code>+</code>, <code>-</code>,<code>*</code>, <code>/</code>, <code>%</code> (inc dividing integers), expressions, numbers evaluate to themselves</li>
 
 <li>what does % do?</li>
 
@@ -51,11 +51,11 @@
 
 <li>variables, x = x + 1</li>
 
-<li>strings, methods, interpolating strings, &#8220;tom&#8221;<em>3</em></li>
+<li>strings, methods, interpolating strings, <code>&quot;tom&quot;*3</code></li>
 
 <li>interactive hello (print vs puts), sanitizing name, entering other details</li>
 
-<li>enter a pair of numbers (5, 2) and print 5 = 2<em>2 + 1</em></li>
+<li>enter a pair of numbers (5, 2) and <code>print 5 = 2*2 + 1</code></li>
 </ul>
 
 <h2 id='ruby_2_methods_and_scopes_ifs_booleans_case'>Ruby 2: methods and scopes, ifs, booleans, case?</h2>
