--- a/cfg.html
+++ b/cfg.html
@@ -30,6 +30,14 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_11__682013'> Session 11 - 6/8/2013</h3>
+
+<ul>
+<li><a href='/mongo1'>Databases 1</a></li>
+
+<li><a href='/hmwk11'>Homework 11</a></li>
+</ul>
+
 <h3 id='session_10__182013'> Session 10 - 1/8/2013</h3>
 
 <ul>
