Updating to 5e70c1fb5f8df62c4516ecfe5e02371d7c247adb.

--- a/html1/index.html
+++ b/html1/index.html
@@ -255,7 +255,7 @@
 	
 
 		<h2>Meet the Command Line</h2>
-		<p>The command line is a way to interact with your computer programmatically. If you are doing any software development you will need to get to grips with using the command line, as many of the programmes you will use will be run from the it, instead of by clicking an icon.</p>
+		<p>The command line is a way to interact with your computer programmatically. If you are doing any software development you will need to get to grips with using the command line, as many of the programs you will use will be run from the it, instead of by clicking an icon.</p>
 
 <p>Note: when giving you instructions for the command line we will precede them with a <code>$</code> to represent the command prompt e.g.</p>
 
