Updating to 5e70c1fb5f8df62c4516ecfe5e02371d7c247adb.

--- a/cfg.html
+++ b/cfg.html
@@ -30,6 +30,14 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_12__882013'>Session 12 - 8/8/2013</h3>
+
+<ul>
+<li><a href='/mongo2'>Sending email</a></li>
+
+<li><a href='/hmwk12'>Homework 12</a></li>
+</ul>
+
 <h3 id='session_11__682013'> Session 11 - 6/8/2013</h3>
 
 <ul>
