--- a/hmwk12/index.html
+++ b/hmwk12/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>hmwk12</title>
+  <title>Homework 12</title>
   <meta name="viewport" content="width=device-width">
   <!-- Twitter bootstrap basic styles -->
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
@@ -29,7 +29,7 @@
   <div class="container">
 
     <div class="page-header">
-  <h1>hmwk12 <small></small></h1>
+  <h1>Homework 12 <small>Finish project and prepare for rails!</small></h1>
 </div>
 
 <div class="tabbable tabs-left">
