Updating to dd6f9960a49601e22e4e0bd4bba2284fbdbb54a9.

--- a/cfg.html
+++ b/cfg.html
@@ -30,6 +30,14 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_13__1382013'>Session 13 - 13/8/2013</h3>
+
+<ul>
+<li><a href='/rails1'>Intro to Rails</a></li>
+
+<li><a href='/hmwk13'>Homework 13</a></li>
+</ul>
+
 <h3 id='session_12__882013'>Session 12 - 8/8/2013</h3>
 
 <ul>
