Updating to dd6f9960a49601e22e4e0bd4bba2284fbdbb54a9.

--- a/rails1/index.html
+++ b/rails1/index.html
@@ -40,7 +40,7 @@
 		
 	
 		
-		<li><a href="#2_mvc" data-toggle="tab"> </a></li>
+		<li><a href="#2_mvc" data-toggle="tab">Model/View/Controller </a></li>
 		
 	
 		
@@ -184,8 +184,8 @@ vendor</code></pre>
 	<div class="tab-pane " id="2_mvc">
 	
 
-		<h2></h2>
-		<p>Model/View/Controller is an application architecture that rails is based on. It works as follows:</p>
+		<h2>Model/View/Controller</h2>
+		<p>Model/View/Controller (MVC) is an application architecture that rails is based on. It works as follows:</p>
 
 <ul>
 <li>The Controller deals with incoming web requests. It manages the interaction between the Models and renders the Views.</li>
