--- a/rails1/index.html
+++ b/rails1/index.html
@@ -153,7 +153,7 @@ vendor</code></pre>
 <li>
 <p>Generate scaffolding for a <code>task</code> model:</p>
 
-<pre><code> $ rails generate scaffold tast name:string due_date:date description:text project:string</code></pre>
+<pre><code> $ rails generate scaffold tast name:string due_date:date description:text project:string completed:boolean</code></pre>
 </li>
 
 <li>
