Updating to dd6f9960a49601e22e4e0bd4bba2284fbdbb54a9.

--- a/html2/index.html
+++ b/html2/index.html
@@ -299,8 +299,8 @@ $ git config remote.origin.push +refs/heads/master:refs/heads/gh-pages --add</co
 <li>
 <p>Set your repository up to push to the gh-pages branch:</p>
 
-<pre><code> $ git config remote.origin.push +ref/heads/master:refs/heads/master --add
- $ git config remote.origin.push +ref/heads/master:refs/heads/gh-pages --add</code></pre>
+<pre><code> $ git config remote.origin.push +refs/heads/master:refs/heads/master --add
+ $ git config remote.origin.push +refs/heads/master:refs/heads/gh-pages --add</code></pre>
 </li>
 
 <li>
