--- a/cfg.html
+++ b/cfg.html
@@ -30,6 +30,12 @@
 
     <h1 id='code_first_girls_2013'>Code First: Girls 2013</h1>
 
+<h3 id='session_14__1582013'> Session 14 - 15/8/2013</h3>
+
+<ul>
+<li><a href='/rails2'>Rails 2 - Relationships</a></li>
+</ul>
+
 <h3 id='session_13__1382013'>Session 13 - 13/8/2013</h3>
 
 <ul>
