Updating to dd6f9960a49601e22e4e0bd4bba2284fbdbb54a9.

--- a/rails2/index.html
+++ b/rails2/index.html
@@ -44,7 +44,7 @@
 		
 	
 		
-		<li><a href="#3_many_to_many" data-toggle="tab">Many-to-many </a></li>
+		<li><a href="#3_many_to_many" data-toggle="tab">Many-to-many relationships </a></li>
 		
 	
 </ul>
@@ -290,7 +290,7 @@ create    db/migrate/20130814112241_change_product_to_product_id.rb</code></pre>
 	<div class="tab-pane " id="3_many_to_many">
 	
 
-		<h2>Many-to-many</h2>
+		<h2>Many-to-many relationships</h2>
 		<p>We&#8217;re now going to look at adding tags to the tasks. Since a task can be tagged with many things and each tag can be applied to many tasks, this is a many-to-many relationship. We will be dealing with the following tables:</p>
 
 <ul>
