--- a/rails2/index.html
+++ b/rails2/index.html
@@ -358,7 +358,7 @@ create    db/migrate/20130814112241_change_product_to_product_id.rb</code></pre>
 
 <p>To <code>app/views/tasks/_form.erb</code> add the following lines:</p>
 <div class='highlight'><pre><code class='html'><span class='nt'>&lt;div</span> <span class='na'>class=</span><span class='s'>&quot;field&quot;</span><span class='nt'>&gt;</span>
-  <span class='err'>&lt;</span>%= f.collection_check_boxes :tag_ids, Tags.all, :id, :name %&gt;
+  <span class='err'>&lt;</span>%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name %&gt;
 <span class='nt'>&lt;/div&gt;</span>
 </code></pre></div>
 <p>As we&#8217;ve now added a new element to our form we need to allow it through in the controller:</p>
