Updating to f291b0f3d1737dae1a5e3ca0d12d5ca2d4564b2f.

--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
 
 
       <h1>Language Love Letters <small>Sally Poundall</small></h1>
-      <p class="lead">Send personalized love messages in the language of your choice. | <a href='http:www.languageloveletters.com'>link</a> | <a href='https://github.com/sallypoundall/languageloveletters'>code</a></p>
+      <p class="lead">Send personalized love messages in the language of your choice. | <a href='http://www.languageloveletters.com'>link</a> | <a href='https://github.com/sallypoundall/languageloveletters'>code</a></p>
 
       <p></p>
 
