Updating to f291b0f3d1737dae1a5e3ca0d12d5ca2d4564b2f.

--- a/hmwk00/index.html
+++ b/hmwk00/index.html
@@ -146,6 +146,16 @@
 <p>There are several other sites that are similar to GitHub e.g. <a href='https://bitbucket.org'>BitBucket</a>. GitHub is by far the most widely used.</p>
 
 <p>GitHub also allows you to put a static website online for free, using <a href='http://pages.github.com/'>GitHub Pages</a> - another feature that we will be making use of during the course.</p>
+
+<h3 id='forum_guidlines'>Forum guidlines</h3>
+
+<p>The forum should be seen as a resource both for you and everyone else who will ever take this course. Here are a few guidlines to help make it the best resource possible:</p>
+
+<ol>
+<li><strong>New question = New topic</strong>: If you have a question, create a new topic. If you have two questions, make two separate topics!</li>
+
+<li><strong>Descriptive titles</strong>: Try to make the topic title as descriptive as you can. Think of someone in the future who has the same problem as you. &#8220;404 - There isn&#8217;t a GitHub page here&#8221; is a better title than &#8220;my site doesn&#8217;t show up&#8221;.</li>
+</ol>
 	</div>
 
 	
