updates for ocl

--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
 
 
       <h1>Bar FlipFlop <small>Alexandra Nikolova</small></h1>
-      <p class="lead">bar flipflop's drunkards playbook | <a href='http://shielded-sands-3991.herokuapp.com/'>link</a> | <a href='https://github.com/everhooder/barflipflop'>code</a></p>
+      <p class="lead">bar flipflop's drunkards playbook | <a href='http://vast-thicket-6143.herokuapp.com/'>link</a> | <a href='https://github.com/everhooder/barflipflop'>code</a></p>
 
       <p></p>
 
@@ -84,7 +84,7 @@
 
 
       <h1>Language Love Letters <small>Sally Poundall</small></h1>
-      <p class="lead">Send personalized love messages in the language of your choice. | <a href='http://radiant-mesa-2475.herokuapp.com/'>link</a> | <a href='https://github.com/sallypoundall/languageloveletters'>code</a></p>
+      <p class="lead">Send personalized love messages in the language of your choice. | <a href='http://www.languageloveletters.com'>link</a> | <a href='https://github.com/sallypoundall/languageloveletters'>code</a></p>
 
       <p></p>
 
@@ -180,8 +180,11 @@
         <p>This project was a great way to review what we have learned during the course, using ruby on rails. The hardest part was probably to link the different models.</p>
 
       <hr>
-
+   <a href='https://docs.google.com/forms/d/10H67MV4ceDmknC4aLoMB9IShEjLMbUohahz6_d55qQ0/viewform' class='btn btn-success btn-large'>Vote now!</a>
 
     </div>
+
+ 
+
   </body>
 </html>
