Updating to aeb9f1d8c43ed4ad4c5d62a2099370082929adde.

--- a/ocl.html
+++ b/ocl.html
@@ -31,21 +31,21 @@
     <h3 id='intro_to_web_programming'>Intro to Web Programming</h3>
 
 <ul>
-<li><a href='/hmwk0'>0: Course Preparation</a></li>
+<li><a href='/hmwk00'>0: Course Preparation</a></li>
 
-<li><a href='/html1'>1: Domain names and HTML</a></li>
+<li><a href='/ocl1'>1: Sites, Servers and HTML</a> * What is a web page? * About servers * URLs and DNS * Meet the command line * Developing with HTML locally * HTML exercise</li>
 
-<li><a href='/html2'>2: Git and site deployment</a></li>
+<li>2: Git and CSS</li>
 
-<li><a href='/html3'>3: CSS and Bootstrap</a></li>
+<li>3: Site deployment</li>
 
-<li><a href='/html4'>4: GitHub and collaboration</a></li>
+<li>4: GitHub and collaboration</li>
 
-<li><a href='/lp2'>5: HTML Forms</a></li>
+<li>5: Collecting analytics</li>
 
-<li><a href='/lp4'>6: Google analytics</a></li>
+<li>6: Gathering input</li>
 
-<li><a href=''>7: What next?</a></li>
+<li>7: What next?</li>
 </ul>
 
 <h4 id='example_pages'>Example pages</h4>
