Updating to aeb9f1d8c43ed4ad4c5d62a2099370082929adde.

--- a/ocl.html
+++ b/ocl.html
@@ -33,7 +33,7 @@
 <ul>
 <li><a href='/hmwk00'>0: Course Preparation</a></li>
 
-<li><a href='/ocl1'>1: Sites, Servers and HTML</a> * What is a web page? * About servers * URLs and DNS * Meet the command line * Developing with HTML locally * HTML exercise</li>
+<li><a href='/ocl1'>1: Sites, Servers and HTML</a></li>
 
 <li>2: Git and CSS</li>
 
