Updating to cd887a7498c0d6c7124110ca3b6534f1fc28d557.

--- a/html_course_plan.html
+++ b/html_course_plan.html
@@ -48,6 +48,8 @@
 
 <p>Finish for home work Buy a domain name</p>
 
+<p>TODO use imgur for hosting</p>
+
 <h3 id='session_2'>Session 2</h3>
 
 <ul>
@@ -60,7 +62,7 @@
 </li>
 
 <li>
-<p>git add, commit</p>
+<p>git add, commit (gitignore done hackily)</p>
 </li>
 
 <li>
