--- a/ocl.html
+++ b/ocl.html
@@ -35,7 +35,7 @@
 
 <li><a href='/ocl1'>1: Sites, Servers and HTML</a></li>
 
-<li>2: Git and CSS</li>
+<li><a href='/ocl2'>2: Git and CSS</a></li>
 
 <li>3: Site deployment</li>
 
