Updating to 81bb14938a6285a1e526eb6384ea856e2e7ee7af.

--- a/ocl.html
+++ b/ocl.html
@@ -37,7 +37,7 @@
 
 <li><a href='/ocl2'>2: Git and CSS</a></li>
 
-<li>3: Site deployment</li>
+<li><a href='/ocl3'>3: Site deployment</a></li>
 
 <li>4: GitHub and collaboration</li>
 
